# annotations

./: LICENCE.txt  README.md  add_tel_lengths.py  annotate_by_chrpos.py  annotate_captureC_spreadsheets.py  annotate_diffbind.py  annotate_distances_lengths_frag_sites.py  annotate_dysgu_output_boundaries.py  annotate_just_genes.py  annotate_kas-seq.py  annotate_multiple_sheets_with_gene_positions.py  annotate_window_multiinter_output.py  basic_position_annotation.py  pyproject.toml  requirements.txt
annotate/: annotate.py
example_annotation_scripts/: README  add_tel_lengths.py  annotate_bed-like_boundaries.py  annotate_bed-like_spreadsheet.py  annotate_by_chrpos.py  annotate_capc_bedgraphs.py  annotate_capc_spreadsheets.py  annotate_captureC_spreadsheets.py  annotate_csv.py  annotate_diffbind.py  annotate_distances_lengths_frag_sites.py  annotate_dysgu_output_boundaries.py  annotate_existing_genes.py  annotate_just_genes.py  annotate_kas-seq.py  annotate_multiple_sheets_with_gene_positions.py  annotate_saras_sas.py  annotate_spreadsheet.py  annotate_window_multiinter_output.py  basic_position_annotation.py  only_region_tel_distances.py
example_input_files/: example_CaC.xlsx  example_bed-like_region_boundaries.txt  example_genes_input.csv  example_multisheet_chr-start-end_input.xlsx  example_multisheet_genes_input.xlsx  example_standard.csv
example_output_files/: annotated-example_multisheet_genes.xlsx  annotated-example_multisheet_genes_input.csv  annotated_example.csv  annotated_example_CaC-exploded.xlsx  annotated_example_CaC-exploded_Sheet1.csv  (+7 more)
(+18 files in other folders)
