[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "genomic_features_annotation"
version = "0.0.1"
authors = [
  { name="E Croot", email="croote@cardiff.ac.uk" },
]
description = "A module for annotating bed-like genomic regions with features such as genes, repeats and fragile sites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "biomart>=0.9.2",
    "ncls>=0.0.68",
    "numpy>=1.26.3",
    "pandas>=2.2.0"
]


